working dummy nurse, enroll, shift handlers - working locally, need to test on lambda
