# deploy/api/watch-endpoints-openapi.yaml
@@ -109,7 +109,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/errorResponse'
-  /api/{version}/{space}/{tenant}/shifts/actions/end/{shiftId}:
+  /api/{version}/{space}/{tenant}/shifts/actions/end/{userId}:
     post:
       summary: End shift
       operationId: endShift
@@ -117,7 +117,7 @@ paths:
         - $ref: '#/components/parameters/version'
         - $ref: '#/components/parameters/space'
         - $ref: '#/components/parameters/tenant'
-        - $ref: '#/components/parameters/shiftId'
+        - $ref: '#/components/parameters/userId'
       responses:
         '200':
           description: Shift ended
@@ -287,13 +287,6 @@ components:
       schema:
         type: string
       description: User identifier within the tenant / sandbox.
-    shiftId:
-      name: shiftId
-      in: path
-      required: true
-      schema:
-        type: string
-      description: Shift identifier.
   schemas:
     nurse:
       type: object
@@ -306,10 +299,13 @@ components:
           type: string
         nickname:
           type: string
+        username:
+          type: string
       required:
         - userId
         - firstName
         - lastName
+        - username
     actionResponse:
       type: object
       properties:
@@ -322,9 +318,9 @@ components:
         userId:
           type: string
           description: User identifier of the user who started the shift
-        shiftId:
+        username:
           type: string
-          description: Unique identifier for the started shift
+          description: Username of the user who started the shift
     badRequestErrorResponse:
       type: object
       properties:
